--- a/todo-app/src/index.css
+++ b/todo-app/src/index.css
@@ -35,10 +35,12 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+.add-button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.2em 1.2em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -46,11 +48,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+.add-button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+.add-button:focus,
+.add-button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -62,7 +64,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  .add-button {
     background-color: #f9f9f9;
   }
 }
