--- a/todo-app/src/components/LoginWindow/LoginWindow.css
+++ b/todo-app/src/components/LoginWindow/LoginWindow.css
@@ -12,3 +12,11 @@
     transition: all 0.5s ease;
     z-index: 1;
 }
+
+.login-input {
+    width: 8rem;
+    border-radius: 0.25rem;
+    border: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
