--- a/todo-app/src/components/NavBar/NavBar.css
+++ b/todo-app/src/components/NavBar/NavBar.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #1B1B1B;
 }
 
 .navbar-item {
@@ -16,4 +16,5 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    cursor: pointer;
 }
