--- a/todo-app/src/components/NavBar/NavBar.css
+++ b/todo-app/src/components/NavBar/NavBar.css
@@ -1,20 +1,17 @@
 .navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
     overflow: hidden;
     background-color: #1B1B1B;
 }
 
-.navbar-item {
+.navbar-right {
     float: right;
 }
 
-.navbar-item a {
-    display: block;
+.navbar-item {
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     cursor: pointer;
+    float: left;
 }
