--- a/todo-app/src/components/NavBar/NavBar.css
+++ b/todo-app/src/components/NavBar/NavBar.css
@@ -15,3 +15,13 @@
     cursor: pointer;
     float: left;
 }
+
+.navbar-item a {
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
+}
+
+.navbar-item a:hover {
+    color: #535bf2;
+}
